Workflow added to model

--- a/XML_tim31/src/main/java/scientificPublication.html
+++ b/XML_tim31/src/main/java/scientificPublication.html
@@ -3,25 +3,22 @@
       <title>Scientific Publication</title>
    </head>
    <body style="font-family: Times New Roman; margin-left: 50px; margin-right: 50px;">
-      <h1 style="text-align: center; font-weight: bold;">Agilne metodologije u softverskom inzenjerstvu </h1><br></br><i>
+      <h1 style="text-align: center; font-weight: bold;">title0</h1><br></br><i>
          Publication id:
-         sp1</i><br></br><i>
+         publicationId1</i><br></br><i>
          Date of submission:
-         2018-05-04</i><br></br><i>
+         2016-05-04</i><br></br><i>
          Language:
          srpski</i><br></br><i>
          Status:
-         accepted</i><br></br><br></br><b style="font-size: 20px;">Authors: </b><p style="text-align: left; font-weight: normal;">
-         <p style="float:left; margin-left:30px">marko70<br></br></p><br></br><p style="float:left; margin-left:30px">branko<br></br></p><br></br></p><br></br><b style="font-size: 20px;">Reviewers: </b><p style="text-align: left; font-weight: normal;">
-         <p style="float:left; margin-left:30px">petar123<br></br></p><br></br></p><br></br><b>Keywords:</b><p style="float:left; margin-left:30px">programiranje</p>
-      <p style="float:left; margin-left:30px">softveversko inzenjerstvo</p>
-      <p style="float:left; margin-left:30px">agilni razvoj</p>
-      <h3 style="text-align: center;">Uvod u agilne metodologije</h3>
-      <p>tekst 1 o uvodu u agilne metodologije primenjene u softverskom inzenjerstvu</p>
-      <p>tekst 2 o uvodu u agilne metodologije primenjene u softverskom inzenjerstvu</p><br></br><h3 style="text-align: center;">Napredni koncepti agilnog razvoja softvera</h3>
-      <p>tekst o naprednim tehnikama razvoja softvera</p>
+         </i><br></br><br></br><b style="font-size: 20px;">Authors: </b><p style="text-align: left; font-weight: normal;">
+         <p style="float:left; margin-left:30px">authorUsername0 misk<br></br></p><br></br></p><br></br><b style="font-size: 20px;">Reviewers: </b><p style="text-align: left; font-weight: normal;"></p><br></br><b>Keywords:</b><h3 style="text-align: center;">title1</h3>
       <p></p>
-      <p><b>Citation 0:</b></p>
-      <p style="float:left; margin-left:30px">Name of author: <i>Marko Markovic</i></p><br></br><p style="float:left; margin-left:30px">Year: <i>2019</i></p><br></br><p style="float:left; margin-left:30px">Text of citation: <i>tekst koji je citiran</i></p><br></br><br></br><p><b>Reference to citation 0:</b></p>
-      <p style="float:left; margin-left:30px">Name of author: <i>Marko Markovic</i></p><br></br><p style="float:left; margin-left:30px">Title of publication: <i>naslov rada gdje citiran tekst</i></p><br></br><p style="float:left; margin-left:30px">Year: <i>2019</i></p><br></br><p style="float:left; margin-left:30px">Url: <i>link do rada</i></p><br></br></body>
+      <p><b>Citation :</b></p>
+      <p style="float:left; margin-left:30px">Name of author: <i>authorNames0 authorNames1</i></p><br></br><p style="float:left; margin-left:30px">Year: <i>50</i></p><br></br><p style="float:left; margin-left:30px">Text of citation: <i>text0</i></p><br></br><p></p>
+      <p><b>Citation :</b></p>
+      <p style="float:left; margin-left:30px">Name of author: <i>authorNames2 authorNames3</i></p><br></br><p style="float:left; margin-left:30px">Year: <i>50</i></p><br></br><p style="float:left; margin-left:30px">Text of citation: <i>text1</i></p><br></br><br></br><h3 style="text-align: center;">title2</h3>
+      <p></p>
+      <p><b>Citation :</b></p>
+      <p style="float:left; margin-left:30px">Name of author: <i>authorNames4 authorNames5</i></p><br></br><p style="float:left; margin-left:30px">Year: <i>50</i></p><br></br><p style="float:left; margin-left:30px">Text of citation: <i>text2</i></p><br></br><p>text3</p><br></br></body>
 </html>
