--- a/XML_tim31/src/main/java/scientificPublication.html
+++ b/XML_tim31/src/main/java/scientificPublication.html
@@ -3,19 +3,24 @@
       <title>Scientific Publication</title>
    </head>
    <body style="font-family: Times New Roman; margin-left: 50px; margin-right: 50px;">
-      <h1 style="text-align: center; font-weight: bold;">Dizajn paterni u javi</h1><br></br><i>
+      <h1 style="text-align: center; font-weight: bold;">Agilne metodologije u softverskom inzenjerstvu</h1><br></br><i>
          Publication id:
-         sp2</i><br></br><i>
+         sp1</i><br></br><i>
          Date of submission:
-         2016-05-04</i><br></br><i>
+         2018-05-04</i><br></br><i>
          Language:
          srpski</i><br></br><i>
          Status:
          reviewing</i><br></br><br></br><b style="font-size: 20px;">Authors: </b><p style="text-align: left; font-weight: normal;">
-         <p style="float:left; margin-left:30px">marko70<br></br></p><br></br></p><br></br><b style="font-size: 20px;">Reviewers: </b><p style="text-align: left; font-weight: normal;"></p><br></br><b>Keywords:</b><p style="float:left; margin-left:30px">java</p>
-      <p style="float:left; margin-left:30px">dizajn sabloni</p>
-      <p style="float:left; margin-left:30px">arhitektura sistema</p>
-      <h3 style="text-align: center;">Osnovni sabloni dizajna</h3>
-      <p>paragraf 1</p>
-      <p>paragraf 2</p><br></br></body>
+         <p style="float:left; margin-left:30px">marko70<br></br></p><br></br></p><br></br><b>Keywords:</b><p style="float:left; margin-left:30px">java 1</p>
+      <p style="float:left; margin-left:30px">programiranje 1</p>
+      <p style="float:left; margin-left:30px">agilnost 1</p>
+      <h3 style="text-align: center;">Uvod u agilne metodologije 2</h3>
+      <p>tekst 1 o uvodu u agilne metodologije primenjene u softverskom inzenjerstvu</p>
+      <p>tekst 2 o uvodu u agilne metodologije primenjene u softverskom inzenjerstvu</p><br></br><h3 style="text-align: center;">Napredni koncepti agilnog razvoja softvera</h3>
+      <p>tekst o naprednim tehnikama razvoja softvera</p>
+      <p>tekst koji je citiranc0</p><br></br><p><b>Reference to citation 0:</b></p>
+      <p style="float:left; margin-left:30px">Name of author: <i>Marko Markovic</i></p><br></br><p style="float:left; margin-left:30px">Title of publication: <i>naslov rada gdje citiran tekst</i></p><br></br><p style="float:left; margin-left:30px">Year: <i>2019</i></p><br></br><p style="float:left; margin-left:30px">Url: <i>link do rada</i></p><br></br><p><b>Reference to citation 1:</b></p>
+      <p style="float:left; margin-left:30px">Name of author: <i>markomarkovic</i></p><br></br><p style="float:left; margin-left:30px">Title of publication: <i>safasfsafsafa</i></p><br></br><p style="float:left; margin-left:30px">Year: <i>2323</i></p><br></br><p style="float:left; margin-left:30px">Url: <i>sdgfaf</i></p><br></br><p><b>Reference to citation 2:</b></p>
+      <p style="float:left; margin-left:30px">Name of author: <i>noviautor</i></p><br></br><p style="float:left; margin-left:30px">Title of publication: <i>naslov rada</i></p><br></br><p style="float:left; margin-left:30px">Year: <i>2017</i></p><br></br><p style="float:left; margin-left:30px">Url: <i>link</i></p><br></br></body>
 </html>
